force-app/main/default/objects/Applicant__c/fields/RunWithoutKIQ__c.field-meta.xml
<CustomField>
    <fullName>RunWithoutKIQ__c</fullName>
    <description>To store KIQ details.</description>
    <label>Run Without KIQ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Accept</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>