force-app/main/default/objects/Applicant__c/fields/SentiLinkFraudScore__c.field-meta.xml
<CustomField>
    <fullName>SentiLinkFraudScore__c</fullName>
    <description>To store SentiLink Fraud Score</description>
    <label>SentiLink Fraud Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>