force-app/main/default/objects/Applicant__c/fields/SentiLinkRemarks__c.field-meta.xml
<CustomField>
    <fullName>SentiLinkRemarks__c</fullName>
    <description>SentiLink Remarks</description>
    <label>SentiLink Remarks</label>
    <length>40</length>
    <type>Text</type>
</CustomField>