force-app/main/default/objects/Applicant__c/fields/SentiLinkStatus__c.field-meta.xml
<CustomField>
    <fullName>SentiLinkStatus__c</fullName>
    <description>Describes SentiLink Status  passed/ under review</description>
    <label>SentiLink Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Under Process</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>