force-app/main/default/objects/Applicant__c/fields/SessionExpireTime__c.field-meta.xml
<CustomField>
    <fullName>SessionExpireTime__c</fullName>
    <description>Session Expire Time</description>
    <inlineHelpText>OTP expire time</inlineHelpText>
    <label>Session Expire Time</label>
    <type>DateTime</type>
</CustomField>