force-app/main/default/objects/Applicant__c/fields/SmsOtp__c.field-meta.xml
<CustomField>
    <fullName>SmsOtp__c</fullName>
    <description>To store OTP</description>
    <label>Sms OTP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>