force-app/main/default/objects/Applicant__c/fields/SmsOtpAttempts__c.field-meta.xml
<CustomField>
    <fullName>SmsOtpAttempts__c</fullName>
    <description>Number of OTP retry Attempts</description>
    <label>OTPAttempts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>