force-app/main/default/objects/Applicant__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <description>SSN number</description>
    <label>SSN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>