force-app/main/default/objects/Applicant__c/recordTypes/Beneficiary.recordType-meta.xml
<RecordType>
    <fullName>Beneficiary</fullName>
    <active>true</active>
    <description>Beneficiary</description>
    <label>Beneficiary</label>
</RecordType>