force-app/main/default/objects/Applicant__c/recordTypes/ContactPerson.recordType-meta.xml
<RecordType>
    <fullName>ContactPerson</fullName>
    <active>true</active>
    <description>Contact Person</description>
    <label>Contact Person</label>
</RecordType>