force-app/main/default/objects/Applicant__c/recordTypes/EmergencyContact.recordType-meta.xml
<RecordType>
    <fullName>EmergencyContact</fullName>
    <active>true</active>
    <description>Emergency Contact</description>
    <label>Emergency Contact</label>
</RecordType>