force-app/main/default/objects/Applicant__c/recordTypes/FamilyMember.recordType-meta.xml
<RecordType>
    <fullName>FamilyMember</fullName>
    <active>true</active>
    <description>Family Member</description>
    <label>Family Member</label>
</RecordType>