force-app/main/default/objects/Applicant__c/recordTypes/Joint.recordType-meta.xml
<RecordType>
    <fullName>Joint</fullName>
    <active>true</active>
    <description>Joint Applicant</description>
    <label>Joint</label>
</RecordType>