force-app/main/default/objects/Applicant__c/recordTypes/Primary.recordType-meta.xml
<RecordType>
    <fullName>Primary</fullName>
    <active>true</active>
    <description>Primary Applicant</description>
    <label>Primary</label>
</RecordType>