force-app/main/default/objects/Applicant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ApplicantType__c</columns>
    <columns>Application__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>