force-app/main/default/objects/Applicant__c/listViews/PendingReview.listView-meta.xml
<ListView>
    <fullName>PendingReview</fullName>
    <columns>NAME</columns>
    <columns>ApplicantType__c</columns>
    <columns>CreditScore__c</columns>
    <columns>KYCStatus__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Review</value>
    </filters>
    <label>Pending Review</label>
</ListView>