force-app/main/default/objects/Applicant__c/listViews/RevisionInProgress.listView-meta.xml
<ListView>
    <fullName>RevisionInProgress</fullName>
    <columns>NAME</columns>
    <columns>ApplicantType__c</columns>
    <columns>CreditScore__c</columns>
    <columns>KYCStatus__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Revision in Progress</value>
    </filters>
    <label>Revision In Progress</label>
</ListView>